0.2.0
Added lfsdockprefs desktop file to install.
Fixed missing prefs image.
Set appnames.
Updated appearance dialog.
Added dock prefs dialog.
Updated prefs apps.
Updated lfscolourchooser to include alpha component.
Updated lfstkprefs.
Fixed first run filedialog.
Added extra options to lfspanelprefs.
Removed unnecessary meunitem  from dock stacking.
Temp removed scale resize.
Added frame alpha ( 0-255 ) to lfswm2 prefs.
Added new lfswm2prefs.
Fixed colour entries in prefs dialogs.
Fixed seg fault on applying lfspanelprefs settings.
Fixed about dialog.
Updated for new lfstk API's.

0.1.3
Fixed windows staying on top of parent windos.
Added lfscolourchooser to apps.
Added scroll/list trough colours to lfstkprefs.
Fixed prefs font select.
Fixed mime list editor apply.
Added font selector to apps.
Added mime type editor to apps
Added option to set number of saved commands in lfsruncommand, see README for details.
Changed lfstkprefs to use new menu and find classes.
Changed lfspanelprefs to use new menu and find classes.
Changed lfswmprefs to use new menu and find classes.
Fixed  memory leak in lfsappearance.
Changed lfsbackdropprefs to use new menu classes.
Changed lfsappearance to use new menu and find classes.
Added forground colour to lfsdesktopprefs.
Lfstkprefs now updates desktop and panels immediately.
Added search in /usr/share/themes as well as ~/.themes for sets.
Fixed no sets instlled in ~/.themes.
Fixed messaging.
Redone test lfstkprefs.
Added themes to lfstkprefs.
Code clean.
Added cursor colour pref to lfstk prefs.
Added mono font pref to lfstk prefs.

0.1.2
Fixed copying/pasting between prefs.
Updated to use LFSTK_handleWindowEvents.
Updated to use pkg-config for lfstoolkit.
Going over to internal sysv msging.
Updated apps to updated toolkit.
Fixed lfsrunapplication not storing history properly.
Force no use theme if theme part missing from tk prefs.
Added msg's to appearence.
Set correct title to WM prefs.
Added messageing to WM prefs.