@@ -21,7 +21,7 @@
 #ifndef _CALLBACKS_
 #define _CALLBACKS_
 
-enum {BUTTONLAUNCH=0,BUTTONREMOVE,BUTTONTBD1,BUTTONTBD2,NOMOREBUTONS};
+enum {BUTTONLAUNCH=0,BUTTONREMOVE,BUTTONPREFS,BUTTONTBD2,NOMOREBUTONS};
 
 extern LFSTK_windowClass	*launcherContextWindow;
 extern LFSTK_windowClass	*taskContextWindow;
