@@ -1,4 +1,6 @@
 0.2.0
+Apply in dockprefs kills all docks.
+Added option to set dock on dockprefs at start up.
 Added lfsdockprefs desktop file to install.
 Fixed missing prefs image.
 Set appnames.
